--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ title {
 
 
 nav {
-    background-color: #333;
+    background-color: #37a117;
 }
 
 main {
@@ -20,7 +20,7 @@ main {
 
 
 footer {
-    background-color: #2c3e50; 
+    background-color: #72b159; 
     color: white; 
     padding: 20px; 
 }
